RUBY-217 - Support Kerberos with JRuby * Added ticket-cache support in gssapi-context (e.g. for MRI) * Implemented native module in JRuby to perform sasl auth. * Updated support code to work properly for both MRI and JRuby, including removing KRB5CCNAME env var settings since we now support specifying the ticket cache when creating the provider universally.

--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,7 @@ build:
       # Set the Java paths (for CCM)
       export JAVA_HOME=$CCM_JAVA_HOME
       export PATH=$JAVA_HOME/bin:$PATH
+      export JRUBY_OPTS="-J-Djava.security.krb5.conf=$WORKSPACE/krb5.conf"
 
       # Define Cassandra or DSE runtime
       if [ "$CCM_IS_DSE" == "true" ]; then
